PSoC_4_BLE_Pressure_Sensor.cydsn/BUILD.log
--------------- Build Started: 12/05/2017 18:37:59 Project: PSoC_4_BLE_Pressure_Sensor, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -gdwarf-3
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c:79:5: error: expected identifier or '(' before '[' token
 char[] StatusOfTemp;
     ^
--------------- Build Failed: 12/05/2017 18:38:01 ---------------
